--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//csv
+	implementation 'com.opencsv:opencsv:5.7.1'
+	//jackson
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 }
 
 tasks.named('test') {
