--- a/ml-ray-fastapi-platform/requirements.txt
+++ b/ml-ray-fastapi-platform/requirements.txt
@@ -1,21 +1,16 @@
 dash==2.18.2
 fastapi==0.115.4
 graphviz==0.20.3
-keras==3.5.0
-keras==3.6.0
+keras==3.6.0  # Retained only one version
 matplotlib==3.9.2
-networkx==3.3
-networkx==3.4.2
-numpy==2.1.3
+networkx==3.4.2  # Retained only one version
+numpy==1.26.0  # Downgraded to maintain compatibility
 pandas==2.2.3
 plotly==5.24.1
 pydantic==2.9.2
 PyYAML==6.0.2
-PyYAML==6.0.2
 ray==2.38.0
-Requests==2.32.3
+requests==2.32.3
 scikit_learn==1.5.2
-tensorflow==2.17.0
-tensorflow==2.18.0
-tensorflow_intel==2.17.0
-tensorflow_intel==2.18.0
+tensorflow==2.18.0  # Retained only one version
+uvicorn==0.22.0
