--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 	//openfeign
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
+	//s3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
