--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
+    "echarts": "^5.5.1",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
