--- a/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
+++ b/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
@@ -4,7 +4,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "random_forest_regression"
       target_variable: "PerfScoreID"
       feature_columns:
@@ -26,7 +26,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "random_forest_classification"
       target_variable: "Termd"
       feature_columns:
@@ -48,7 +48,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "logistic_regression_binary"
       target_variable: "Overpaid"
       feature_columns:
@@ -79,7 +79,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "logistic_regression_multinomial"
       target_variable: "PerfScoreID"
       feature_columns:
@@ -101,7 +101,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "kmeans_clustering_segmentation"
       feature_columns:
         - "Position"
@@ -117,7 +117,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "kmeans_clustering_anomaly_detection"
       feature_columns:
         - "Salary"
@@ -134,7 +134,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "neural_network_regression"
       target_variable: "PerfScoreID"
       feature_columns:
@@ -157,7 +157,7 @@ tests:
     endpoint: "/predict"
     method: "POST"
     payload:
-      file_path: "./dataset/Human_Resources_Data_Set.csv"
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
       model_choice: "graph_neural_network_analysis"
       node_features_path: "./dataset/node_features.csv"
       edges_path: "./dataset/edges.csv"
