--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "next": "15.0.1",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.2"
   },
