--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/styles": "^6.1.6",
+    "@mui/x-data-grid": "^7.22.1",
     "axios": "^1.7.7",
+    "convex-hull": "^1.0.3",
+    "d3": "^7.9.0",
     "echarts": "^5.5.1",
+    "ml-pca": "^4.1.1",
     "next": "15.0.1",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
