--- a/front/package.json
+++ b/front/package.json
@@ -16,8 +16,10 @@
     "@mui/x-data-grid": "^7.22.1",
     "axios": "^1.7.7",
     "convex-hull": "^1.0.3",
+    "cookie": "^1.0.1",
     "d3": "^7.9.0",
     "echarts": "^5.5.1",
+    "js-cookie": "^3.0.5",
     "ml-pca": "^4.1.1",
     "next": "15.0.1",
     "plotly.js": "^2.35.2",
