--- a/ml-ray-fastapi-platform/requirements.txt
+++ b/ml-ray-fastapi-platform/requirements.txt
@@ -10,6 +10,7 @@ plotly==5.24.1
 pydantic==2.9.2
 PyYAML==6.0.2
 ray==2.38.0
+ray[serve]==2.38.0
 requests==2.32.3
 scikit_learn==1.5.2
 tensorflow==2.18.0  # Retained only one version
