--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-plotly.js": "^2.6.0",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.2"
