[FE] feat: 모델 선택 로직 수정

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,7 @@ build:
     - cp -R front /home/ubuntu/front
     - cd /home/ubuntu/front
     - sh ./front.sh
+  only:
+    - /.*\/master$/  
   tags:
     - build
