--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - cp build/libs/backend-0.0.1-SNAPSHOT.jar /home/ubuntu/back
     - cd /home/ubuntu/back
     - sh back.sh
+  only:
+    - /.*\/master$/  
   tags:
     - build
-
