--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.2"
   },
