[ML] fix : solve the hard coding feature about relationship_column in GNN

--- a/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
+++ b/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
@@ -188,7 +188,7 @@ tests:
         - "Skill Redundancy Level"
       target_column: "Absence Cost Impact ($)"
       task_type: "regression"
-      relationship_column: "ManagerID" # Adjust if 'ManagerID' exists in your dataset
+      relationship_column: "ManagerID"
       sample_size: 10
       random_state: 42
     expected_status: 200
