--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,9 @@
     "cookie": "^1.0.1",
     "d3": "^7.9.0",
     "echarts": "^5.5.1",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "ml-pca": "^4.1.1",
     "next": "15.0.1",
     "plotly.js": "^2.35.2",
