[ML] fix : conficlt

--- a/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
+++ b/ml-ray-fastapi-platform/scripts/test_config_soowan_1.yaml
@@ -188,7 +188,7 @@ tests:
         - "Skill Redundancy Level"
       target_column: "Absence Cost Impact ($)"
       task_type: "regression"
-      relationship_column: "ManagerID"  # Adjust if 'ManagerID' exists in your dataset
+      relationship_column: "ManagerID"
       sample_size: 10
       random_state: 42
     expected_status: 200
@@ -221,7 +221,7 @@ tests:
         - "Skill Redundancy Level"
       target_column: "Role Criticality Score"
       task_type: "classification"
-      relationship_column: "ManagerID"  # Adjust if 'ManagerID' exists in your dataset
+      relationship_column: "ManagerID" # Adjust if 'ManagerID' exists in your dataset
       sample_size: 10
       random_state: 42
     expected_status: 200
@@ -272,4 +272,59 @@ tests:
       id_column: "Employee ID"
     expected_status: 200
 
+  - id: 12
+    description: "12. Support Vector Machine Classification"
+    endpoint: "/predict"
+    method: "POST"
+    payload:
+      file_path: "https://s3.ap-northeast-2.amazonaws.com/wadada-bucket/304efd3f-416c-46e8-891a-a92d85afab85.csv"
+      model_choice: "support_vector_machine_classification"
+      target_variable: "Termd"
+      feature_columns:
+        - "EmpSatisfaction"
+        - "EngagementSurvey"
+        - "PerfScoreID"
+        - "Salary"
+        - "TenureDays"
+        - "Absences"
+        - "DaysLateLast30"
+      id_column: "EmpID"
+      kernel: "rbf"
+      C: 1.0
+      gamma: "scale"
+    expected_status: 200
 
+  - id: 13
+    description: "13. Support Vector Machine Regression with Hyperparameter Tuning"
+    endpoint: "/predict"
+    method: "POST"
+    payload:
+      file_path: "./dataset/Simulated_Factory_Impact_Data.csv"
+      model_choice: "support_vector_machine_regression"
+      target_variable: "Absence Cost Impact ($)"
+      feature_columns:
+        - "Factory Operating Rate (%)"
+        - "Production Volume (units)"
+        - "Production Efficiency (%)"
+        - "Production Downtime Rate (%)"
+        - "Role Criticality Score"
+        - "Absence Impact on Volume (units)"
+        - "Absence Impact on Efficiency (%)"
+        - "Overtime Dependency Rate (%)"
+        - "Maintenance Requirement Increase"
+        - "Cross-Training Index"
+        - "Error Rate Increase (%)"
+        - "Process Bottleneck Potential (%)"
+        - "Team Coordination Score"
+        - "Job Role Coverage (%)"
+        - "Absenteeism Frequency"
+        - "Shift Flexibility Score"
+        - "Operational Risk Factor"
+        - "Skill Redundancy Level"
+      id_column: "Employee ID"
+      param_grid:
+        C: [0.1, 1, 10]
+        gamma: ["scale", "auto"]
+        epsilon: [0.1, 0.2]
+        kernel: ["rbf", "linear"]
+    expected_status: 200
