[FE] feat: 채팅 페이지 개선

--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^6.1.6",
     "@mui/x-data-grid": "^7.22.1",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "convex-hull": "^1.0.3",
     "cookie": "^1.0.1",
     "d3": "^7.9.0",
