--- a/backend/src/main/resources/monitoring.yml
+++ b/backend/src/main/resources/monitoring.yml
@@ -2,4 +2,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: "prometheus"
+        include: health, info, metrics, prometheus
