--- a/front/package.json
+++ b/front/package.json
@@ -19,17 +19,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "buffer": "^6.0.3",
     "convex-hull": "^1.0.3",
     "cookie": "^1.0.1",
     "d3": "^7.9.0",
     "echarts": "^5.5.1",
     "html2canvas": "^1.4.1",
+    "iconv-lite": "^0.6.3",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.456.0",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.456.0",
     "ml-pca": "^4.1.1",
     "next": "15.0.1",
     "plotly.js": "^2.35.2",
